[#594] Creting small visual contrast on radio group (#649)
* creting small visual contrast on radio group

* Adding styling to edit page

* Changing option text

* Fixing indentation

--- a/public/stylesheets/less/modules/createButton.less
+++ b/public/stylesheets/less/modules/createButton.less
@@ -60,6 +60,12 @@
   .options-wrap {
     padding: 10px !important;
   }
+  .radio-group {
+    background: #f5f5f5;
+    margin-top: -10px;
+    padding-bottom: 1px !important;
+  }
+
   .header{
     h1{
     }
