--- a/views/widget/edit.pug
+++ b/views/widget/edit.pug
@@ -177,25 +177,26 @@ block content
                         .form-group
                           div(style="display:inline-block;")
                             input(type='checkbox' name='https_popup' ng-model='widget.https_popup')
-                            span.radio-name I don't have HTTPS
+                            span.radio-name Support Chrome on HTTP
                             span.badge(data-toggle='tooltip' data-placement="right" title="Using HTTPS is strongly recommended for VoIP applications. This feature is merely a workaround since Google Chrome doesn't support WebRTC over HTTP. The widget will open a secure popup window on Google Chrome for calling if you enable this feature") ?
-                        .form-group
-                          label.hide_widget
-                            input(type='radio' name='incompatible_browser_configuration' ng-model='widget.incompatible_browser_configuration' value="hide_widget")
-                            span.radio-name Hide the widget
-                            span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, hide the widget") ?
-                        .form-group
-                          label.link_button_to_a_page
-                            input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="link_button_to_a_page")
-                            span.radio-name Link button to a page
-                            span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, specify a URL to go to when the button is clicked") ?
-                            input.form-control(http-prefix type="url" name="link_button_to_a_page_value" ng-model="widget.link_button_to_a_page_value" ng-show="widget.incompatible_browser_configuration == 'link_button_to_a_page'" placeholder="i.e. https://mysite.com")
-                        .form-group
-                          label.show_text_html
-                            input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="show_text_html")
-                            span.radio-name Show text/HTML
-                            span.badge(data-toggle='tooltip' data-placement="right" title="Instead of showing the button, display the entered HTML ") ?
-                            textarea.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-bind-html="widget.show_text_html_value" ng-model="widget.show_text_html_value")
+                        .options-wrap.radio-group
+                          .form-group
+                            label.hide_widget
+                              input(type='radio' name='incompatible_browser_configuration' ng-model='widget.incompatible_browser_configuration' value="hide_widget")
+                              span.radio-name Hide the widget
+                              span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, hide the widget") ?
+                          .form-group
+                            label.link_button_to_a_page
+                              input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="link_button_to_a_page")
+                              span.radio-name Link button to a page
+                              span.badge(data-toggle='tooltip' data-placement="right" title="If the visitor’s browser does not support WebRTC, specify a URL to go to when the button is clicked") ?
+                              input.form-control(http-prefix type="url" name="link_button_to_a_page_value" ng-model="widget.link_button_to_a_page_value" ng-show="widget.incompatible_browser_configuration == 'link_button_to_a_page'" placeholder="i.e. https://mysite.com")
+                          .form-group
+                            label.show_text_html
+                              input(type='radio' name='incompatible_browser_configuration' ng-model="widget.incompatible_browser_configuration" value="show_text_html")
+                              span.radio-name Show text/HTML
+                              span.badge(data-toggle='tooltip' data-placement="right" title="Instead of showing the button, display the entered HTML ") ?
+                              textarea.form-control(type="text" name="show_text_html_value", placeholder="Enter text or HTML" ng-show="widget.incompatible_browser_configuration == 'show_text_html'" ng-bind-html="widget.show_text_html_value" ng-model="widget.show_text_html_value")
 
               .col-sm-12.col-lg-6
                 .section
