--- a/views/widget/edit.pug
+++ b/views/widget/edit.pug
@@ -75,7 +75,7 @@ block content
                       .options-wrap.active
                         .form-group
                           div(style="display:inline-block;")
-                            input(type='checkbox' name='show_frame' ng-model='widget.show_frame' onclick="if (!this.checked){ }")
+                            input(type='checkbox' name='show_frame' ng-model='widget.show_frame')
                             span.radio-name Show frame
                             span.badge(data-toggle='tooltip' data-placement="right" title="Shows/Hides the background and border of the button") ?
                           div(style="display:inline-block;")
