--- a/public/stylesheets/less/widget/vxb-widget.less
+++ b/public/stylesheets/less/widget/vxb-widget.less
@@ -86,13 +86,14 @@
       overflow: hidden;
       text-overflow: ellipsis;
       .vw-title {
-        display: inline;
+        display: inline !important;
         padding: 0 0 0 10px;
         color: #1671ad !important;
         line-height: 46px !important;
         font-size: 16px !important;
         font-weight: 700 !important;
         text-align: left !important;
+        text-transform: !important;
       }
       .vw-animated-dots {
         color: #1671ad;
