--- a/public/stylesheets/less/widget/vxb-widget.less
+++ b/public/stylesheets/less/widget/vxb-widget.less
@@ -87,13 +87,13 @@
       text-overflow: ellipsis;
       .vw-title {
         display: inline !important;
-        padding: 0 0 0 10px;
+        padding: 0 0 0 10px !important;
         color: #1671ad !important;
         line-height: 46px !important;
         font-size: 16px !important;
         font-weight: 700 !important;
         text-align: left !important;
-        text-transform: !important;
+        text-transform: none !important;
       }
       .vw-animated-dots {
         color: #1671ad;
