--- a/views/voxbone_secure_widget.pug
+++ b/views/voxbone_secure_widget.pug
@@ -24,7 +24,8 @@ doctype html
   data-dial_pad=((the_widget.dial_pad === undefined || the_widget.dial_pad) ? undefined : `${the_widget.dial_pad}`)
   data-show_frame=((the_widget.show_frame === undefined || the_widget.show_frame) ? undefined : `${the_widget.show_frame}`)
   data-show_branding=`${the_widget.show_branding}`
-  data-test_setup="false"
+  data-test_setup='false'
   data-ringback=((the_widget.ringback === undefined ||the_widget.ringback) ? undefined : `${the_widget.ringback}`)
+  data-auto_dial='true'
 )
 script(async src=`${script}`)
