[694] vw-rating-comment-question (#700)
* vw-rating-comment-question target styles

* Update vxb-widget.less

--- a/public/stylesheets/less/widget/vxb-widget.less
+++ b/public/stylesheets/less/widget/vxb-widget.less
@@ -226,6 +226,12 @@
       margin-top: 5px;
     }
   }
+  .vw-body .vw-rating .vw-rating-question {
+    color: #6d7679 !important;
+    font-size: 14px;
+    line-height: 1.4;
+    margin: 5px 0 15px;
+  }
   .vw-body .vw-rating {
     width: 100%;
   }
