--- a/views/widget/demo.pug
+++ b/views/widget/demo.pug
@@ -40,6 +40,7 @@ block content
               .col-xs-12(ng-cloak)
                 h1 Demo WebRTC Click-to-Call Button
                 p #[b Questions?] #[a(href="https://click2vox.com/faq" target="_blank") See our Frequently Asked Questions document.]
+                p #[b Are you a developer?] #[a(href="https://developers.voxbone.com/how-to/use-click2vox-sdk/" target="_blank") Check out our documentation on how to link our libraries and add calling to your website.]
 
                 #alert-success.alert.alert-warning.ng-hide(ng-hide="isWebRTCSupported()") #[i.glyphicon.glyphicon-exclamation-sign] You are using a browser that does not support WebRTC. You can configure and preview your buttons, but you will not be able to place test calls. Please use Chrome or Firefox for maximum functionality.
         hr
