[MISC] New Voxbone logos (#735)
* [MISC] Updating Voxbone logo

* [MISC] Updates packages

* [MISC] More changes

--- a/views/home.pug
+++ b/views/home.pug
@@ -78,9 +78,8 @@ block content
               br
               |USA #[span Tel: +1 415 520 505]
               span
-                a(href=
-              "https://www.voxbone.com/" target="_blank")
-                  img(alt="" src="../../images/voxbone-logo.png")
+                a(href="https://www.voxbone.com/" target="_blank")
+                  img(alt="By Voxbone" src="//cdn.voxbone.com/workshop-voxbone-com/by_voxbone.png")
 
           .col-md-4
             h3 Links
