--- a/views/voxbone_widget_iframe.pug
+++ b/views/voxbone_widget_iframe.pug
@@ -7,7 +7,7 @@ html(lang='en', ng-app="voxboneApp")
     title= title
 
     link(rel="apple-touch-icon" href="")
-    link(rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico")
+    link(rel="shortcut icon" type="image/x-icon" href=process.env.FAVICON_CDN_URL)
 
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
