--- a/views/social-buttons.pug
+++ b/views/social-buttons.pug
@@ -1,10 +1,11 @@
 p.social-buttons
-  a(href="/auth/voxbone" class="vxb-button")
-    img(src="/images/voxbone-x.png" width="25px" height="25px")
-    span
-      voxbone
-    br
-    span.btn-txt Voxbone
+  if process.env.VOXBONE_OAUTH_ENABLED === 'true'
+    a(href="/auth/voxbone" class="vxb-button")
+      img(src="/images/voxbone-x.png" width="25px" height="25px")
+      span
+        voxbone
+      br
+      span.btn-txt Voxbone
 
   a(href="/auth/google" class="google-button")
     span.fa.fa-google-plus
