enable beta in all frontend (#739)
* enable beta in all frontend

* pointing to CDN directly

* missing one

--- a/views/home.pug
+++ b/views/home.pug
@@ -129,4 +129,4 @@ block content
           button(type="button" class="btn btn-primary btn-lg" data-dismiss="modal") Dismiss
 
   #voxButton_575b3d7e89005411004db935.voxButton(data-button_id='575b3d7e89005411004db935' data-text='click2vox Us Now' data-redirect_url='https://voxbone.com' data-did='883510080408' data-dial_pad='true' data-context='' data-send_digits='' data-caller_id='Click2Vox' data-incompatible_browser_configuration='hide_widget' data-show_frame='false' data-show_branding='false' data-use_default_button_css='false' data-div_css_class_name='hidden' data-test_setup='false' data-button_css_class_name='btn btn-purple')
-  script(async src='/click2vox.js')
+  script(async src='https://cdn.voxbone.com/click2vox/click2vox-3.min.js')
