--- a/views/widget/demo.pug
+++ b/views/widget/demo.pug
@@ -27,7 +27,7 @@ block content
 
         angular.bootstrap(document, ['voxboneApp']);
 
-        require(['#{process.env.APP_URL}/click2vox.js']);
+        require(['#{process.env.LATEST_CLICK2VOX_SDK_URL}']);
     });
   .site-wrapper-inner.home-wrap
     .container
