--- a/views/widget/edit.pug
+++ b/views/widget/edit.pug
@@ -25,7 +25,7 @@ block extra_head
 
         angular.bootstrap(document, ['voxboneApp']);
 
-        require(['#{process.env.APP_URL}/click2vox.js']);
+        require(['#{process.env.LATEST_CLICK2VOX_SDK_URL}']);
     });
 
 block content
