--- a/views/tracking-scripts/hotjar.pug
+++ b/views/tracking-scripts/hotjar.pug
@@ -8,3 +8,5 @@ if process.env.HOTJAR_ID
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+
+    hj('tagRecording', [#{hotjar_tags}]);
