--- a/views/home.pug
+++ b/views/home.pug
@@ -17,7 +17,6 @@ block content
     .container
       .row.banner-content
         .col-sm-12.col-md-8
-
           h1 NO WEB DEVELOPMENT NEEDED
           h2 HD calling to any SIP address straight from any website
           p.
@@ -127,6 +126,8 @@ block content
           p#subscription-message Placeholder
         .modal-footer
           button(type="button" class="btn btn-primary btn-lg" data-dismiss="modal") Dismiss
+
+  include eol-modal
 
   #voxButton_575b3d7e89005411004db935.voxButton(data-button_id='575b3d7e89005411004db935' data-text='click2vox Us Now' data-redirect_url='https://voxbone.com' data-did='883510080408' data-dial_pad='true' data-context='' data-send_digits='' data-caller_id='Click2Vox' data-incompatible_browser_configuration='hide_widget' data-show_frame='false' data-show_branding='false' data-use_default_button_css='false' data-div_css_class_name='hidden' data-test_setup='false' data-button_css_class_name='btn btn-purple')
   script(async src='https://cdn.voxbone.com/click2vox/click2vox-3.min.js')
