updated eol date (#745)

--- a/views/eol-modal.pug
+++ b/views/eol-modal.pug
@@ -11,7 +11,7 @@
 
           p We recently made the decision to call time on click2vox.com in order to concentrate the resources of our Labs program on exciting innovations that will better help simplify business communications.
 
-          p As a result, this service will not be longer available for use since 2018-01-31
+          p As a result, this service will not be longer available for use as of 2018-01-21
 
           p Please visit the #[a(href="https://www.voxbone.com/product/labs" target="_blank") Voxbone Labs] to see what we're currently working on!
         .modal-footer.custom-modal-footer
